# bazelGo_build_deploy

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  graph.in  main.go
cmd/: BUILD.bazel  roll.go  root.go
pkg/roll/: BUILD.bazel  role_dice_test.go  roll_dice.go
