load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

# Load the gazelle rule
load("@bazel_gazelle//:def.bzl", "gazelle")

# The following comment defines the import path that corresponds to the repository root directory.
# This is a critical definition, and if you mess this up all of the `BUILD.bazel` file generation
# will have errors.

# Modify the prefix to your project name in your git repository.

# gazelle:prefix github.com/AshrafK-17/bazelGo_build_deploy
gazelle(name = "gazelle")

# Add a rule to call gazelle and pull in new go dependencies.
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "bazelGo_build_deploy_lib",
    srcs = ["main.go"],
    importpath = "github.com/AshrafK-17/bazelGo_build_deploy",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "bazelGo_build_deploy",
    embed = [":bazelGo_build_deploy_lib"],
    visibility = ["//visibility:public"],
)
