load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "roll.go",
        "root.go",
    ],
    importpath = "github.com/AshrafK-17/bazelGo_build_deploy/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/roll",
        "@com_github_spf13_cobra//:cobra",
    ],
)
