load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "roll",
    srcs = ["roll_dice.go"],
    importpath = "github.com/AshrafK-17/bazelGo_build_deploy/pkg/roll",
    visibility = ["//visibility:public"],
)

go_test(
    name = "roll_test",
    srcs = ["role_dice_test.go"],
    embed = [":roll"],
)
